# libnpymath

./: meson.options
src/: arm64_exports.c  halffloat.c  ieee754.c.src  meson.build  npy_math.c  npy_math_complex.c.src
src/include/libnpymath/: block.h  common.h  config.h  cpu.h  endian.h  fpmath.h  halffloat.h  internal.h.src  meson.build  meson_config.h.in  npy_math.h  npy_math_common.h  private.h  utils.h
src/include/numpy/: npy_math.h
src/include/numpy/npymath/: _config.h.in  meson_config.h.in
