option('use_numpy_types', type: 'boolean', value: false,
       description: 'Whether libnpymath should use the numpy types')
option('install_lib', type: 'boolean', value: true,
       description: 'Whether to install the libnpymath library')
option('headers_dir', type: 'string', value: '',
       description: 'Installation directory for the libnpymath headers')
option('lib_dir', type: 'string', value: 'libnpymath',
       description: 'Installation directory for the libnpymath library')
